# ml_architectures

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
ml_architectures/common/: bn_blstm.py  epoch_encoder.py  filterbank_shape.py
ml_architectures/lseqsleepnet/: classifier.py  epoch_encoder.py  long_sequence_model.py  lseqsleepnet.py
ml_architectures/seqsleepnet/: __init__.py  seqsleepnet.py  short_sequence_model.py  utils.py
ml_architectures/usleep/: usleep.py
ml_architectures/usleep/weights/: Depth10_CF05.ckpt  EESM19_finetuned.ckpt  m1-m2_finetuned.ckpt  usleep_onechannel.ckpt
tests/: test_lseqsleepnet.py  test_seqsleepnet.py  test_usleep.py
